--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ nav {
    margin-bottom: 20px;
     display: flex;
     padding: 10px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    border-radius: 15px;
 }
 h1 {
     display: flex;
