--- a/style.css
+++ b/style.css
@@ -64,3 +64,77 @@ main {
 h2, h3 {
     margin: 0px;
 }
+    /* portfolio styles */
+    .content h1 {
+        color: rgb(241, 191, 191);
+    }
+
+    #portfolio {
+        list-style-type: none;
+        padding-left: 0;
+    }
+
+    #portfolio li {
+        background: #fff;
+        padding: 10px;
+        border-radius: 10px;
+        margin-bottom: 10px;
+    }
+
+    #portfolio li:hover {
+        background: #eee;
+    }
+
+    #portfolio a {
+        text-decoration: none;
+        color: #f3bcbc;
+    }
+     /* responsive web design */
+     @media screen and (min-width: 120px) and (max-width: 1080px) {
+        main {
+          height: 100ch;
+          zoom: 1.5;
+          display: grid;
+        }
+
+        h1 {
+          font-size: 44px;
+        }
+
+        h2 {
+          font-size: 42px;
+        }
+
+        h3 {
+          font-size: 36px;
+        }
+
+        #all-contents {
+          height: 100ch;
+          margin: none;
+        }
+
+        a {
+          font-size: 42px;
+        }
+
+        .sidebar {
+          margin-right: 0px;
+          justify-content: center;
+          align-items: center;
+        }
+
+        .sidebar-img {
+          width: 100%;
+        }
+
+        p,
+        li {
+          font-size: 24px;
+        }
+
+        .content {
+          align-content: center;
+          justify-content: center;
+        }
+    }
